--- a/TOKEN.html
+++ b/TOKEN.html
@@ -5,7 +5,7 @@
     <input type="text" id="cardholder-name" placeholder="John Doe" />
       <div id="card-secure-fields">
         <input type="text" id="idnumber" placeholder="ID Number" />
-        <input type="text" id="idtype" placeholder="Passport, Driver's License" />
+        <input type="text" id="idtype" placeholder="Passport, Driver's License, CC, CE" />
         <div id="card-secure-fields">
       </div>
       <button type=”submit”>Pay</button>
