--- a/TOKEN.html
+++ b/TOKEN.html
@@ -1,26 +1,23 @@
-<html>
-<script language="JavaScript" type="text/javascript" src="https://js.paymentsos.com/v2/latest/secure-fields.min.js"></script>
-  <script>POS.setPublicKey("1df2bcb0-3b78-46c9-bba1-001ea65c8857");
-  </script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <body>
     <form id="payment-form">
-    <input type="text" id="cardholder-name" placeholder="John Doe" />
+      <div class="form-group">
+        <label for="formGroupExampleInput"><b>Card's Name</label>
+        <input type="text" class="form-control" id="cardholder-name" placeholder="Name Surname">
+      </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput"><b>Billing Information</label>
+        <input type="text" class="form-control" id="billing-address" placeholder="Billing-address">
+        <input type="text" class="form-control" id="city" placeholder="City">
+        <input type="text" class="form-control" id="country" placeholder="Country">
+        <input type="text" class="form-control" id="phone" placeholder="Phone">
+        <input type="text" class="form-control" id="email" placeholder="E-mail">
+      </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput"><b>Credir Card Details</label>
+      </div>
     <div id="card-secure-fields">
     </div>
     <button type=”submit”>Pay</button>
   </form>
-  <script>
-    POS.setEnvironment("test");
-    POS.initSecureFields('card-secure-fields');
-    document.getElementById('payment-form').addEventListener('submit', function(event) {
-      event.preventDefault();
-      const additionalData = {
-        holder_name: document.getElementById('cardholder-name').value // This field is mandatory
-      }
-      POS.createToken(additionalData, function(result) {
-      });
-    });
-  </script>
-</body>
-</html>
 
