--- a/TOKEN.html
+++ b/TOKEN.html
@@ -7,11 +7,11 @@
   <body>
     <form id="payment-form" class="form-inline">
       <div class="form-group">
-        <label for="formGroupExampleInput"><b>Card-holder Name</label>
+        <label for="formGroupExampleInput"><b>Card-holder Name</b></label>
         <input type="text" class="form-control" id="cardholder-name" placeholder="Name Surname">
       </div>
       <div class="form-group">
-        <label for="formGroupExampleInput"><b>Billing Information</label>
+        <label for="formGroupExampleInput"><b>Billing Information</b></label>
         <input type="text" class="form-control" id="billing-address" placeholder="Billing-address">
         <input type="text" class="form-control" id="city" placeholder="City">
         <input type="text" class="form-control" id="country" placeholder="Country">
@@ -19,7 +19,7 @@
         <input type="text" class="form-control" id="email" placeholder="E-mail">
       </div>  
       <div class="form-group">
-        <label for="formGroupExampleInput"><b>Credir Card Details</label>
+        <label for="formGroupExampleInput"><b>Credir Card Details</b></label>
         <div id="card-secure-fields"></div>
       </div>
     <button type=”submit”>Pay</button>
@@ -50,3 +50,4 @@
   </script>
 </body>
 </html> 
+      
